documentação da rota de clientes finalizada, finalização da clienteService, ajuste da clienteRoutes, criação de enums para o modelo de cliente e metodo modelIsValid no modelo de cliente
